Hide tokens in logs and initialize rate limiting

--- a/nginx.conf
+++ b/nginx.conf
@@ -12,15 +12,22 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+    set $filtered_request $request;
+
+    if ($filtered_request ~ (.*)access_token=[^&]*(.*)) {
+        set $filtered_request $access_token=[FILTERED]$2;
+    }
+
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$filtered_request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
     access_log  /var/log/nginx/access.log  main;
 
-    upstream puma { server $VALENT_PUMA_URL; }
+    limit_req_zone $binary_remote_addr zone=req_ip:10m rate=200r/m;
+    limit_req_zone $binary_remote_addr zone=login_ip:10m rate=10r/m;
 
-    upstream fider { server $FIDER_URL; }
+    upstream puma { server $VALENT_PUMA_URL; }
 
     server_tokens off;
     sendfile on;
@@ -29,8 +36,5 @@ http {
     tcp_nodelay on;
     keepalive_timeout 65;
 
-    # Include conf.d files
-    # include /etc/nginx/conf.d/redirects.conf;
-    # include /etc/nginx/conf.d/fider.conf;
     include /etc/nginx/conf.d/default.conf;
 }
