--- a/default.conf
+++ b/default.conf
@@ -2,12 +2,7 @@ server {
     listen 80;
     server_name _;
     client_max_body_size $CLIENT_MAX_BODY_SIZE;
-    # charset koi8-r;
-    # access_log  /var/log/nginx/host.access.log  main;
 
-    # 127.0.0.11 is DNS set up by Docker, see:
-    # https://docs.docker.com/engine/userguide/networking/configure-dns/
-    # https://github.com/moby/moby/issues/20026
     resolver $RESOLVERS valid=10s;
 
     location /ios { return 302 https://apps.apple.com/us/app/id1458212603; }
@@ -17,27 +12,31 @@ server {
     location /chat { return 302 https://t.me/recar_io_chat; }
     location /whitepaper { return 302 https://assets.recar.io/Whitepaper.pdf; }
 
-    location /fider {
-        proxy_pass http://fider;
-        proxy_set_header Host $http_host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+    location / {
+        limit_req zone=req_ip burst=100 nodelay;
 
-        proxy_set_header Upgrade $http_upgrade; 
-        proxy_set_header Connection "upgrade"; 
-        proxy_http_version 1.1;
-    }
-
-    location ^~ / {
         proxy_pass http://puma;
-        proxy_set_header Host $http_host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-
-        proxy_set_header Upgrade $http_upgrade; 
-        proxy_set_header Connection "upgrade"; 
-        proxy_http_version 1.1;
     }
+
+    location /api/v1/sessions/ {
+        limit_req zone=login_ip burst=2 nodelay;
+
+        proxy_pass http://puma;
+    }
+
+    location /cable {
+        proxy_pass http://puma;
+
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        break;
+    }
+
+    proxy_set_header Host $http_host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-Port $server_port;
+    proxy_set_header X-Forwarded-Host $host;
 }
