--- a/default.conf
+++ b/default.conf
@@ -5,6 +5,18 @@ server {
 
     resolver $RESOLVERS valid=10s;
 
+    set $filtered_request $request;
+
+    if ($filtered_request ~ (.*)access_token=[^&]*(.*)) {
+        set $filtered_request $access_token=[FILTERED]$2;
+    }
+
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$filtered_request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log  /var/log/nginx/access.log  main;
+
     location /ios { return 302 https://apps.apple.com/us/app/id1458212603; }
     location /apk { return 302 https://assets.recar.io/recario.apk; }
     location /android { return 302 https://play.google.com/store/apps/details?id=com.viktorvsk.recario; }
