Use map instead of set in http block

--- a/nginx.conf
+++ b/nginx.conf
@@ -12,6 +12,17 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
+    map $request_uri $filtered_request {
+        default $request_uri;
+        ~*^(.*)(access_token=[^&]*)(.*)$ $1access_token=[FILTERED]$3;
+    }
+
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$filtered_request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log  /var/log/nginx/access.log  main;
+
     limit_req_zone $binary_remote_addr zone=req_ip:10m rate=200r/m;
     limit_req_zone $binary_remote_addr zone=login_ip:10m rate=10r/m;
 
