--- a/default.conf
+++ b/default.conf
@@ -41,4 +41,6 @@ server {
     proxy_set_header X-Forwarded-Proto $scheme;
     proxy_set_header X-Forwarded-Port $server_port;
     proxy_set_header X-Forwarded-Host $host;
+
+    add_header Access-Control-Allow-Origin *;
 }
