Add Dashboard and Budget SPA apps

--- a/default.conf
+++ b/default.conf
@@ -7,6 +7,11 @@ server {
 
     access_log  /var/log/nginx/access.log  main;
 
+    root /var/www/nginx;
+
+    location = /budget { return 301 $scheme://$http_host/budget/; }
+    location = /dashboard { return 301 $scheme://$http_host/dashboard/; }
+
     location /ios { return 302 https://apps.apple.com/us/app/id1458212603; }
     location /apk { return 302 https://assets.recar.io/recario.apk; }
     location /android { return 302 https://play.google.com/store/apps/details?id=com.viktorvsk.recario; }
@@ -18,6 +23,22 @@ server {
         limit_req zone=req_ip burst=100 nodelay;
 
         proxy_pass http://puma;
+    }
+
+    location ^~ /budget/ {
+        root /var/www/nginx/budget/;
+
+        if (!-e $request_filename){
+            rewrite ^(.*)$ /index.html break;
+        }
+    }
+
+    location ^~ /dashboard/ {
+        root /var/www/nginx/dashboard/;
+
+        if (!-e $request_filename){
+            rewrite ^(.*)$ /index.html break;
+        }
     }
 
     location /api/v1/sessions/ {
