--- a/nginx.conf
+++ b/nginx.conf
@@ -17,6 +17,11 @@ http {
         ~*^(.*)(access_token=[^&]*)(.*)$ $1access_token=[FILTERED]$3;
     }
 
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        ''      close;
+    }
+
     log_format  main  '$remote_addr - $remote_user [$time_local] "$filtered_request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
