--- a/apps/budget.html.template
+++ b/apps/budget.html.template
@@ -18,11 +18,12 @@
     footer { margin-top: auto; }
   </style>
 </head>
-<body class="is-flex is-flex-direction-column">
+<body class="is-flex is-flex-direction-column" x-data="App">
   <nav class="navbar is-black has-shadow" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item" href="$BUDGET_BASE_PATH">
-      <img src="https://recar.io/images/logo.svg" width="113">
+      <img src="https://recar.io/images/logo.svg" width="64">
+      <h1 class="title is-size-3 m-auto">Рекаріо</h1>
     </a>
 
   </div>
@@ -42,7 +43,7 @@
         </div>
       </div>
 </nav>
-  <div class="container mt-6 mb-6" x-data="Models">
+  <div class="container mt-6 mb-6">
     <template x-if="currentRoute === '/'">
       <div>
         <h1 class="is-size-1 title has-text-centered mb-6">Знайти авто на свій бюджет</h1>
@@ -126,7 +127,7 @@
     const BASE_PATH = "$BUDGET_BASE_PATH";
     const API_URL = "$VALENT_API_HOST/api/integrations/budget";
 
-    function Models() {
+    function App() {
       return {
         init() {
           window.addEventListener("popstate", () => this.router())
