--- a/default.conf
+++ b/default.conf
@@ -30,6 +30,8 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-Port $server_port;
         proxy_set_header X-Forwarded-Host $host;
+
+        add_header Access-Control-Allow-Origin "http://localhost:*";
     }
 
     location ^~ /budget/ {
@@ -59,6 +61,8 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-Port $server_port;
         proxy_set_header X-Forwarded-Host $host;
+
+        add_header Access-Control-Allow-Origin "http://localhost:*";
     }
 
     location /cable {
@@ -73,5 +77,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-Port $server_port;
         proxy_set_header X-Forwarded-Host $host;
+
+        add_header Access-Control-Allow-Origin "http://localhost:*";
     }
 }
