--- a/default.conf
+++ b/default.conf
@@ -78,6 +78,6 @@ server {
         proxy_set_header X-Forwarded-Port $server_port;
         proxy_set_header X-Forwarded-Host $host;
 
-        add_header Access-Control-Allow-Origin "http://localhost:*";
+        add_header Access-Control-Allow-Origin "http://localhost:8080";
     }
 }
