Adjust CORS for dev

--- a/default.conf
+++ b/default.conf
@@ -31,7 +31,7 @@ server {
         proxy_set_header X-Forwarded-Port $server_port;
         proxy_set_header X-Forwarded-Host $host;
 
-        add_header Access-Control-Allow-Origin "http://localhost:*";
+        add_header Access-Control-Allow-Origin "http://localhost:8080";
     }
 
     location ^~ /budget/ {
@@ -62,7 +62,7 @@ server {
         proxy_set_header X-Forwarded-Port $server_port;
         proxy_set_header X-Forwarded-Host $host;
 
-        add_header Access-Control-Allow-Origin "http://localhost:*";
+        add_header Access-Control-Allow-Origin "http://localhost:8080";
     }
 
     location /cable {
