--- a/default.conf
+++ b/default.conf
@@ -20,6 +20,12 @@ server {
     location /whitepaper { return 302 https://assets.recar.io/Whitepaper.pdf; }
 
     location / {
+        root /var/www/nginx/landing/;
+        index index.html;
+        try_files $uri $uri.html $uri/index.html $uri/ @puma;
+    }
+
+    location @puma {
         limit_req zone=req_ip burst=100 nodelay;
 
         proxy_pass http://puma;
