--- a/default.conf
+++ b/default.conf
@@ -11,6 +11,7 @@ server {
 
     location = /budget { return 301 $scheme://$http_host/budget/; }
     location = /dashboard { return 301 $scheme://$http_host/dashboard/; }
+    location ~ ^/ads/(\d+)$ { return 301 $scheme://$http_host/ads/$1/; }
 
     location /ios { return 302 https://apps.apple.com/us/app/id1458212603; }
     location /apk { return 302 https://assets.recar.io/recario.apk; }
@@ -50,6 +51,14 @@ server {
 
     location ^~ /dashboard/ {
         root /var/www/nginx/dashboard/;
+
+        if (!-e $request_filename){
+            rewrite ^(.*)$ /index.html break;
+        }
+    }
+
+    location ~ ^/ads/\d+/$ {
+        root /var/www/nginx/ads/;
 
         if (!-e $request_filename){
             rewrite ^(.*)$ /index.html break;
