--- a/default.conf
+++ b/default.conf
@@ -65,20 +65,20 @@ server {
         }
     }
 
-    location /api/v1/sessions/ {
-        limit_req zone=login_ip burst=2 nodelay;
+    # location /api/v1/sessions/ {
+    #     limit_req zone=login_ip burst=2 nodelay;
 
-        proxy_pass http://puma;
+    #     proxy_pass http://puma;
 
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Port $server_port;
-        proxy_set_header X-Forwarded-Host $host;
+    #     proxy_set_header Host $host;
+    #     proxy_set_header X-Real-IP $remote_addr;
+    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #     proxy_set_header X-Forwarded-Proto $scheme;
+    #     proxy_set_header X-Forwarded-Port $server_port;
+    #     proxy_set_header X-Forwarded-Host $host;
 
-        add_header Access-Control-Allow-Origin "http://localhost:8080";
-    }
+    #     add_header Access-Control-Allow-Origin "http://localhost:8080";
+    # }
 
     location /cable {
         proxy_pass http://puma;
